# frogprolog-svn

currentversion/: AUTHORS  Doxyfile  compile.bat  configure  configure.in  frogprolog.kdevelop  frogprolog.kdevses  makeredis  maketests  setvars
currentversion/examples/cppusage/: maincode.cpp  makefile  mypred.cpp  mypred.h  prologcode.cpp  prologcode.h  prologcode.pl
currentversion/examples/testcases/base/: backtracking.pl  backtracking.pl.ex  call.pl  graph.pl  graph.pl.ex  unification.pl  unification.pl.ex
currentversion/src/: Interpreter.cpp  Makefile.am  Makefile.in  Uti3DCore.cpp  Uti3DCore.h  Uti3DMath.cpp  Uti3DMath.h  UtiArchiv.cpp  UtiArchiv.h  UtiString.cpp  UtiString.h  UtiType.cpp  UtiType.h  base.pl  basepredicates.cpp  basepredicates.h  bip.cpp  bip.h  bip.module  codecontainer.cpp  codecontainer.h  compile.bat  cppbuildin.cpp  cppbuildin.h  cppengine.cpp  cppengine.h  cppfactory.cpp  cppfactory.h  cpphelper.h  enginefactory.cpp  enginefactory.h  externparser.cpp  externparser.h  frogprolog.cpp  frogprolog.h  gdef.h  identifierdatabase.cpp  identifierdatabase.h  machine.cpp  machine.h  (+27 more)
currentversion/templates/: h
